Correction bug d'affichage des Balloon Toolbar de CKeditor qui ne s'affiche pas correctement dans les fenêtres modales en raison d'un conflit de z-index

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -42,6 +42,9 @@ body
 p
   margin: 2px 0px!important
 
+.ck.ck-balloon-panel
+  z-index: 5000!important
+
 @media print
   .is-printing > *
      display: none
